# iiimf-chewing

./: AUTHORS  ChangeLog  Makefile.am  autogen.sh  configure.ac
include/: ChangeLog  EIMIL.h  IMArg.h  IMProtocolStruct.h  iiimcf.h  syscfg.h  threaddef.h
include/iiimp/: iiimp-character-subsets.h  iiimp-data.h  iiimp-keycode.h  iiimp-opcode.h  iiimp.h
include/iml/: SunIM.h  SunIMCore.h  SunIMMMan.h  SunIMMthd.h  SunIMPriv.h  SunIMProt.h  SunIMPub.h
m4/: check_gtk.m4  check_socket.m4  check_sys.m4  check_x.m4  im_common.m4
scripts/: remove-autotool.sh
src/: Makefile.am  chewing.c
