SUBDIRS = src

EXTRA_DIST = \
	include/ChangeLog \
	include/IMArg.h	\
	include/IMProtocolStruct.h \
	include/README \
	include/syscfg.h \
	include/iml/SunIM.h \
	include/iml/SunIMCore.h	\
	include/iml/SunIMMMan.h	\
	include/iml/SunIMMthd.h	\
	include/iml/SunIMPriv.h	\
	include/iml/SunIMProt.h	\
	include/iml/SunIMPub.h
